아이콘 수정임
ㅇ

--- a/static/css/timetable/timetable.css
+++ b/static/css/timetable/timetable.css
@@ -150,10 +150,8 @@
   /* Popup */
   .popup {
     display: flex; /* 부모 요소에 flexbox 적용 */
-    position: absolute;
+    position: fixed;
     z-index: 1000;
-    left: 0;
-    top: 0;
     width: 100%;
     height: 100%;
     /* background-color: rgba(0, 0, 0, 0.5); */
