--- a/templates/timetable/timetable.html
+++ b/templates/timetable/timetable.html
@@ -76,12 +76,12 @@
           <div class="events-day">
             <div class="event" id="day1" style="grid-row: 10 / 13;" onclick="showPopup('피지컬X & 비주얼 쇼', '18:30 ~ 20:00', '오프닝')">
                 <span class="event-time">18:30 ~ 20:00</span> <!-- 시간 표시 -->
-                <img src="{{ url_for('static', path='images/타임테이블 아이콘/피지컬 X.png')}}" alt="icon">
+                <img src="{{ url_for('static', path='images/타임테이블 아이콘/콘서트.png')}}" alt="icon">
                 피지컬X & 비주얼 쇼 <!-- 이벤트 이름 -->
               </div>
             <div class="event" id="day1" style="grid-row: 13 / 14;" onclick="showPopup('피지컬X & 비주얼 쇼', '18:30 ~ 20:00', '오프닝')">
                 <span class="event-time">20:00 ~ 20:30</span> <!-- 시간 표시 -->
-                <img src="{{ url_for('static', path='images/타임테이블 아이콘/콘서트.png')}}" alt="icon">
+                <img src="{{ url_for('static', path='images/타임테이블 아이콘/개회식.png')}}" alt="icon">
                 개회식 <!-- 이벤트 이름 -->
               </div>
             <div class="event" id="day1" style="grid-row: 14 / 15;" onclick="showPopup('피지컬X & 비주얼 쇼', '18:30 ~ 20:00', '오프닝')">
@@ -135,7 +135,7 @@
             </div>
             <div class="event" id="day3" style="grid-row: 13 / 14;" onclick="showPopup('피지컬X & 비주얼 쇼', '18:30 ~ 20:00', '오프닝')">
               <span class="event-time">20:00 ~ 20:30</span> <!-- 시간 표시 -->
-              <img src="{{ url_for('static', path='images/타임테이블 아이콘/콘서트.png')}}" alt="icon">
+              <img src="{{ url_for('static', path='images/타임테이블 아이콘/폐회식.png')}}" alt="icon">
               폐회식 <!-- 이벤트 이름 -->
             </div>
             <div class="event" id="day3" style="grid-row: 14 / 15;" onclick="showPopup('피지컬X & 비주얼 쇼', '18:30 ~ 20:00', '오프닝')">
@@ -160,7 +160,7 @@
 
           
 <!-- Popup -->
-<!-- <div id="popup" class="popup">
+<div id="popup" class="popup">
   <div class="popup-content">
     <div class="popup-left">
       <img class="event-icon" alt="icon">
@@ -172,6 +172,6 @@
       <span class="close-btn" onclick="closePopup()">&times;</span>
     </div>
   </div>
-</div> -->
+</div>
 </body>
 </html>
