아이콘 찐 수정
ㅇㅇ

--- a/templates/timetable/timetable.html
+++ b/templates/timetable/timetable.html
@@ -76,7 +76,7 @@
           <div class="events-day">
             <div class="event" id="day1" style="grid-row: 10 / 13;" onclick="showPopup('피지컬X & 비주얼 쇼', '18:30 ~ 20:00', '오프닝')">
                 <span class="event-time">18:30 ~ 20:00</span> <!-- 시간 표시 -->
-                <img src="{{ url_for('static', path='images/타임테이블 아이콘/콘서트.png')}}" alt="icon">
+                <img src="{{ url_for('static', path='images/타임테이블 아이콘/쇼2.png')}}" alt="icon">
                 피지컬X & 비주얼 쇼 <!-- 이벤트 이름 -->
               </div>
             <div class="event" id="day1" style="grid-row: 13 / 14;" onclick="showPopup('피지컬X & 비주얼 쇼', '18:30 ~ 20:00', '오프닝')">
@@ -108,7 +108,7 @@
           <div class="events-day">
             <div class="event" id="day2" style="grid-row: 7 / 13;" onclick="showPopup('피지컬X & 비주얼 쇼', '18:30 ~ 20:00', '오프닝')">
               <span class="event-time">17:00 ~ 20:00</span> <!-- 시간 표시 -->
-              <img src="{{ url_for('static', path='images/타임테이블 아이콘/댄스.png')}}" alt="icon">
+              <img src="{{ url_for('static', path='images/타임테이블 아이콘/쇼2.png')}}" alt="icon">
               B.P.M & 민속무용학과 공연 <!-- 이벤트 이름 -->
             </div>
             <div class="event" id="day2" style="grid-row: 13 / 17;" onclick="showPopup('피지컬X & 비주얼 쇼', '18:30 ~ 20:00', '오프닝')">
