--- a/static/css/timetable/timetable.css
+++ b/static/css/timetable/timetable.css
@@ -154,9 +154,7 @@
   .popup {
     display: flex; /* 부모 요소에 flexbox 적용 */
     position: absolute;
-    z-index: 1000;
-    left: 0;
-    top: 0;
+    z-index: 1500;
     width: 100%;
     height: 100%;
     /* background-color: rgba(0, 0, 0, 0.5); */
@@ -171,9 +169,12 @@
   .popup-content {
     display: flex; 
     width: 24rem; 
-    height: 15rem; 
+    height: 16rem; 
     border-radius: 1.5rem; 
     overflow: hidden;
+    
+    background-color: rgba(255, 255, 255, 0.6);
+    backdrop-filter: blur(5px);
 }
   .popup-left {
     background-color: #6442A0;
@@ -198,23 +199,34 @@
     background-color: #B18FEB; 
     padding: 20px;
     text-align: left;
-    font-size: 15px;
+    font-size: 14px;
+    line-height: 1.6;
     color: white;
     width: 65%; 
     position: relative;
     display: flex;
     flex-direction: column;
-    justify-content: center; /* 세로 중앙 정렬 */
     align-items: flex-start; /* 왼쪽 정렬 */
+
+    max-height: 15rem;
+    overflow-y: auto;
+     /* 스크롤바 스타일 변경 */
+    &::-webkit-scrollbar {
+      width: 5px;
+    }
+    &::-webkit-scrollbar-thumb {
+       background: #6442A0; 
+       border-radius: 10px;
+      }
   }
 
    .close-btn {
-    position: absolute;
+    position: fixed;
     top: 0.3rem;
     right: 0.8rem;
     background: none;
     border: none;
-    font-size: 2em;
+    font-size: 3em;
     color: #FEE5C6;
     cursor: pointer;
   }
