--- a/static/css/timetable/timetable.css
+++ b/static/css/timetable/timetable.css
@@ -153,10 +153,11 @@
   /* Popup */
   .popup {
     display: flex; /* 부모 요소에 flexbox 적용 */
-    position: absolute;
+    position: fixed;
     z-index: 1500;
-    width: 100%;
+    width: 180%;
     height: 100%;
+    bottom: 5%;
     /* background-color: rgba(0, 0, 0, 0.5); */
     justify-content: center;
     align-items: center;
@@ -168,17 +169,16 @@
 
   .popup-content {
     display: flex; 
-    width: 24rem; 
+    width: 23rem; 
     height: 16rem; 
     border-radius: 1.5rem; 
     overflow: hidden;
     
-    background-color: rgba(255, 255, 255, 0.6);
     backdrop-filter: blur(5px);
 }
   .popup-left {
     background-color: #6442A0;
-    padding: 20px;
+    padding: 1.2rem;
     text-align: right;
     color: white;
     width: 35%; 
@@ -189,15 +189,15 @@
   }
 
   .popup-left #popup-title {
-    font-size: 17px; /* 타이틀 폰트 크기 */
+    font-size: 16px; /* 타이틀 폰트 크기 */
   }
   .popup-left #popup-time {
-    font-size: 15px; /* 시간 폰트 크기 */
+    font-size: 14px; /* 시간 폰트 크기 */
   }
   
   .popup-right {
     background-color: #B18FEB; 
-    padding: 20px;
+    padding: 1.2rem;
     text-align: left;
     font-size: 14px;
     line-height: 1.6;
