--- a/static/css/timetable/timetable.css
+++ b/static/css/timetable/timetable.css
@@ -8,7 +8,7 @@
     min-height: 100vh; /* 전체 화면 높이 */
     margin: 0;
     font-family: 'pretendard', sans-serif;
-    background-color: #2b2355;
+    background: linear-gradient(to bottom, #2b2355, #4f4677);
     color: white;
   }
   
@@ -119,6 +119,7 @@
     gap: 7px;
     width: 100%; /* 부모 요소인 events-day의 너비와 맞춤 */
     box-sizing: border-box; /* padding을 포함하여 너비를 계산 */
+    border-radius: 10px
 }
 
   .event-time {
@@ -271,7 +272,7 @@
     min-height: 100vh; /* 전체 화면 높이 */
     margin: 0;
     font-family: 'pretendard', sans-serif;
-    background-color: #2b2355;
+    background: linear-gradient(to bottom, #2b2355, #4f4677);
     color: white;
   }
   
@@ -379,6 +380,7 @@
     gap: 7px;
     width: 100%; /* 부모 요소인 events-day의 너비와 맞춤 */
     box-sizing: border-box; /* padding을 포함하여 너비를 계산 */
+    border-radius: 7px
 }
 
   .event-time {
