--- a/templates/booth/booth_list.html
+++ b/templates/booth/booth_list.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -120,76 +121,22 @@ for (var i = 0; i < positions.length; i ++) {
 }
       </script>
     
-
-    <!-- 박스 목록 스크롤 영역 -->
     <div class="box-container">
-      <div class="box">
-            <div class="box-icon">
-              <i class="fa-solid fa-utensils"></i>
-            </div>
-            <div class="box-content">
-                <p class="box-title">멋쟁이사자처럼</p>
-                <p class="box-description">음식 부스</p>
-            </div>
-        </div>
-        <div class="box">
-            <div class="box-icon">
-              <i class="fa-solid fa-utensils"></i>
-            </div>
-            <div class="box-content">
-                <p class="box-title">멋쟁이사자처럼</p>
-                <p class="box-description">음식 부스</p>
-            </div>
-        </div>
-        <div class="box">
-            <div class="box-icon">
-              <i class="fa-solid fa-utensils"></i>
-            </div>
-            <div class="box-content">
-                <p class="box-title">멋쟁이사자처럼</p>
-                <p class="box-description">음식 부스</p>
-            </div>
-        </div>
-        <div class="box">
-            <div class="box-icon">
-              <i class="fa-solid fa-utensils"></i>
-            </div>
-            <div class="box-content">
-                <p class="box-title">멋쟁이사자처럼</p>
-                <p class="box-description">음식 부스</p>
-            </div>
-        </div>
-        <div class="box">
-          <div class="box-icon">
-            <i class="fa-solid fa-utensils"></i>
+      {% for booth in booths %}
+      <a href="{{ url_for('get_booth_detail', booth_name=booth.booth_name) }}">
+          <div class="box">
+              <div class="box-icon">
+                  <i class="fa-solid fa-utensils"></i>
+              </div>
+              <div class="box-content">
+                  <p class="box-title">{{ booth.booth_name }}</p>
+                  <p class="box-description">{{ booth.booth_category }}</p>
+              </div>
           </div>
-          <div class="box-content">
-              <p class="box-title">멋쟁이사자처럼</p>
-              <p class="box-description">음식 부스</p>
-          </div>
-      </div>
-      <div class="box">
-        <div class="box-icon">
-          <i class="fa-solid fa-utensils"></i>
-        </div>
-        <div class="box-content">
-            <p class="box-title">멋쟁이사자처럼</p>
-            <p class="box-description">음식 부스</p>
-        </div>
-      </div>
-      <div class="box">
-        <div class="box-icon">
-          <i class="fa-solid fa-utensils"></i>
-        </div>
-        <div class="box-content">
-            <p class="box-title">멋쟁이사자처럼</p>
-            <p class="box-description">음식 부스</p>
-        </div>
-      </div>
-    
-    
-        <!-- 필요하면 더 많은 박스 추가 -->
-    </div>
+      </a>
+      {% endfor %}
+  </div>
+</div>
 </div>
   </body>
 </html>
