--- a/templates/booth/booth_detail.html
+++ b/templates/booth/booth_detail.html
@@ -71,11 +71,11 @@
             <div class="booth_name">
                 <!-- <img src="" alt="booth_icon"> --><!-- fontawesome 아이콘이 더 나은가 싶기도 해서-->
                 <h3><i class="fa-solid fa-utensils"></i>{{ booth.booth_name }}</h3>
-                <div class="booth_info">
+                <!-- <div class="booth_info">
                     <p><i class="fa-solid fa-circle"></i><span>{{ booth.organizer }}</span>|<a href="https://www.instagram.com/{{ booth.instagram_id }}" target="_blank">
                         <i class="fa-brands fa-instagram"></i>
                     </a></p>
-                </div>
+                </div> -->
             </div>
             <div class="heart">
                 <img src="/static/images/heart_default.png" alt="">
