--- a/templates/faq/faq.html
+++ b/templates/faq/faq.html
@@ -46,19 +46,19 @@
         <section class="faq-section">
             <h2 class="FAQ">FAQ</h2>
             <div class="faq-item">
-                <button class="faq-question" onclick="toggleAnswer(1)">Q1. 부스 참여하려면 미리 예약해야 하나요? ▼</button>
+                <button class="faq-question" onclick="toggleAnswer(1)">Q1. 부스 참여하려면 미리 예약해야 하나요?</button>
                 <div class="faq-answer" id="answer-1">
                     개당 120g으로 1개로 충분합니다. 더욱 풍성한 개거품을 원하실 경우 1개 정도 더 이용하셔도 좋습니다!
                 </div>
             </div>
             <div class="faq-item">
-                <button class="faq-question" onclick="toggleAnswer(2)">Q2. 부스 참여하려면 미리 예약해야 하나요? ▼</button>
+                <button class="faq-question" onclick="toggleAnswer(2)">Q2. 재학생존 입장 시간은 언제인가요?</button>
                 <div class="faq-answer" id="answer-2">
                     내용이 여기에 들어갑니다.
                 </div>
             </div>
             <div class="faq-item">
-                <button class="faq-question" onclick="toggleAnswer(3)">Q3. 부스 참여하려면 미리 예약해야 하나요? ▼</button>
+                <button class="faq-question" onclick="toggleAnswer(3)">Q3. 부스 운영 시간은 어디에서 확인할 수 있나요?</button>
                 <div class="faq-answer" id="answer-3">
                     내용이 여기에 들어갑니다.
                 </div>
