--- a/static/css/faq/faq.css
+++ b/static/css/faq/faq.css
@@ -1,40 +1,6 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-#logo_img {
-    position: fixed;
-    width: 60vw;
-    top: 10%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    transition: opacity 0.3s ease-in-out, visibility 0s 0.3s;
-}
-
-.logoDate {
-    text-align: center;
-    font-family: "Pretendard-Regular";
-    color: #AFAFAF;
-    font-size: 2.5vw;
-    letter-spacing: 0.5vw;
-}
-
-.FAQ {
-    text-align: center;
-    font-family: "Felixti";
-    font-size: 7vw;
-    font-weight: 500;
-    text-align: center;
-    color: white;
-    letter-spacing: 0.5vw;
-    padding-bottom: 50px;
-}
-
 body {
     font-family: Arial, sans-serif;
-    background: linear-gradient(#7e727d, #484176, #39317a, #939390, #fcfbff);
+    background: linear-gradient(to bottom, #3b2862, #2c2f74, #cbbce3);
     color: white;
     display: flex;
     justify-content: center;
@@ -43,63 +9,205 @@ body {
     padding-top: 40px;
 }
 
-.container {
-    width: 380px;
-    border-radius: 20px;
-    padding: 20px;
+font-face {
+    font-weight: 400;
+    font-family: "Pretendard-Regular";
+    src: url("https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff")
+      format("woff");
+}
+
+#logoImg {
+    position: fixed;
+    top: 10%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 100;
+    /* opacity: 0; */
+    /* visibility: hidden; */
+    /* transition: opacity 0.3s ease-in-out, visibility 0s 0.3s; */
+}
+
+.logoDate {
+    margin-top: 2px;
     text-align: center;
-    position: relative;
-    margin-top: 20%;
+    font-family: "Pretendard-Regular";
+    color: #afafaf;
+    font-size: 2.5vw;
+    letter-spacing: 0.5vw;
 }
 
-.faq-section {
-    margin-top: 20px;
+@media (max-width: 768px) {
+    #logoImg {
+        width: 60vw;
+    }
+
+    .FAQ {
+        text-align: center;
+        font-family: "Felixti";
+        font-size: 7vw;
+        font-weight: 500;
+        text-align: center;
+        color: white;
+        letter-spacing: 0.5vw;
+        padding-bottom: 50px;
+    }
+
+    .container {
+        width: 380px;
+        border-radius: 20px;
+        padding: 20px;
+        text-align: center;
+        position: relative;
+        margin-top: 20%;
+    }
+
+    .faq-section {
+        margin-top: 20px;
+    }
+
+    .faq-item {
+        margin-bottom: 20px;
+        background-color: white;
+        border-radius: 10px;
+        overflow: hidden;
+        transition: max-height 0.4s ease-out;
+        max-height: 60px;
+        padding: 15px;
+    }
+
+    .faq-question {
+        width: 100%;
+        background-color: white;
+        border: none;
+        color: #413978;
+        padding: 4px;
+        padding-top: 7px;
+        cursor: pointer;
+        font-size: 15px;
+    }
+
+    .faq-answer {
+        background-color: white;
+        padding: 10px;
+        font-size: 15px;
+        padding-top: 7px;
+        display: none;
+        color: #413978;
+        height: 0;
+        overflow: hidden;
+        transition: height 0.3s ease-out;
+        line-height: 1.6;
+    }
+
+    .faq-answer.active {
+        display: block;
+        height: auto;
+    }
+
+    .faq-item.active {
+        max-height: 200px;
+    }
+
+    .faq-item.active .faq-question {
+        border-bottom: 1px solid #423B78;
+    }
+
+    #hambuger {
+        width: 50px; /* 너비를 50px로 설정 */
+        height: 50px; /* 높이를 50px로 설정 */
+        position: fixed; /* 위치 고정 */
+        top: 6%; /* 상단에서 10px 떨어짐 */
+        left: 85%; /* 좌측에서 10px 떨어짐 */
+    }
 }
 
-.faq-item {
-    margin-bottom: 20px;
-    background-color: white;
-    border-radius: 10px;
-    overflow: hidden;
-    transition: max-height 0.4s ease-out;
-    max-height: 60px;
-    padding: 15px;
-}
+@media (min-width: 768px) {
+    #logoImg {
+        width: 50%; /* 로고의 부모 요소에 대한 너비 설정 */
+    }
 
-.faq-question {
-    width: 100%;
-    background-color: white;
-    border: none;
-    color: #413978;
-    padding: 15px;
-    padding-top: 7px;
-    text-align: left;
-    cursor: pointer;
-    font-size: 15px;
-}
+    #logoImg img {
+        width: 100%; /* 내부의 img 태그에 너비 100% 설정 */
+        height: auto; /* 비율 유지하면서 크기 조정 */
+        margin-top: 15px;
+    }
 
-.faq-answer {
-    background-color: white;
-    padding: 10px;
-    font-size: 15px;
-    padding-top: 7px;
-    display: none;
-    color: #413978;
-    height: 0;
-    overflow: hidden;
-    transition: height 0.3s ease-out;
-    line-height: 1.6;
-}
+    .FAQ {
+        text-align: center;
+        font-family: "Felixti";
+        font-size: 7vw;
+        font-weight: 500;
+        text-align: center;
+        color: white;
+        letter-spacing: 0.5vw;
+        padding-bottom: 50px;
+    }
 
-.faq-answer.active {
-    display: block;
-    height: auto;
-}
+    .container {
+        width: 380px;
+        border-radius: 20px;
+        padding: 20px;
+        text-align: center;
+        position: relative;
+        margin-top: 20%;
+    }
 
-.faq-item.active {
-    max-height: 200px;
-}
+    .faq-section {
+        margin-top: 20px;
+    }
 
-.faq-item.active .faq-question {
-    border-bottom: 1px solid #423B78;
+    .faq-item {
+        width: 150%;
+        margin-bottom: 20px;
+        background-color: white;
+        border-radius: 10px;
+        overflow: hidden;
+        transition: max-height 0.4s ease-out;
+        max-height: 60px;
+        padding: 15px;
+    }
+
+    .faq-question {
+        width: 100%;
+        background-color: white;
+        border: none;
+        color: #413978;
+        padding: 4px;
+        padding-top: 7px;
+        cursor: pointer;
+        font-size: 30px;
+    }
+
+    .faq-answer {
+        background-color: white;
+        padding: 10px;
+        font-size: 30px;
+        padding-top: 7px;
+        display: none;
+        color: #413978;
+        height: 0;
+        overflow: hidden;
+        transition: height 0.3s ease-out;
+        line-height: 1.6;
+    }
+
+    .faq-answer.active {
+        display: block;
+        height: auto;
+    }
+
+    .faq-item.active {
+        max-height: 200px;
+    }
+
+    .faq-item.active .faq-question {
+        border-bottom: 1px solid #423B78;
+    }
+
+    #hambuger {
+        left: 82%;
+        top: 4%;
+        position: fixed;
+        width: 8vw;
+    }
 }
