--- a/templates/timetable/timetable.html
+++ b/templates/timetable/timetable.html
@@ -99,6 +99,11 @@
                 <img src="{{ url_for('static', path='images/타임테이블 아이콘/DJ.png')}}" alt="icon">
                 DJ 페스티벌 <!-- 이벤트 이름 -->
               </div>
+            <div style="grid-row: 1;" ></div>
+            <div style="grid-row: 3;" ></div>
+            <div style="grid-row: 5;" ></div>
+            <div style="grid-row: 7;" ></div>
+            <div style="grid-row: 17;" ></div>
           </div>
       </div>
 
@@ -121,6 +126,10 @@
               <img src="{{ url_for('static', path='images/타임테이블 아이콘/DJ.png')}}" alt="icon">
               DJ 페스티벌 <!-- 이벤트 이름 -->
             </div>
+            <div style="grid-row: 1;" ></div>
+            <div style="grid-row: 3;" ></div>
+            <div style="grid-row: 5;" ></div>
+            <div style="grid-row: 17;" ></div>
           </div>
       </div>
 
@@ -153,6 +162,7 @@
               <img src="{{ url_for('static', path='images/타임테이블 아이콘/DJ.png')}}" alt="icon">
               DJ 페스티벌 <!-- 이벤트 이름 -->
             </div>
+            <div style="grid-row: 1;" ></div>
           </div>
       </div>
   </div>
