--- a/static/css/timetable/timetable.css
+++ b/static/css/timetable/timetable.css
@@ -1,3 +1,13 @@
+@font-face {
+  font-weight: 400; /* 폰트의 두께 */
+  font-family: 'Felixti'; /* 폰트 이름 */
+  src: url('/static/font/Felixti.TTF') format('truetype');
+}
+@font-face {
+  font-weight: 400;
+  font-family: 'Pretendard-Regular';
+  src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
+}
 /* ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ휴대폰 */
 @media (max-width: 768px) {
   body {
@@ -30,7 +40,6 @@
     padding-top: 0;
     margin: 0 auto; /* 수평 중앙 정렬 */
   }
-  
   
   
 
@@ -104,6 +113,33 @@
     padding-left: 7px; /* 수직선과 내용 사이의 간격 추가 */
     width: 100%; /* 부모 요소인 events-day의 너비와 맞춤 */
     box-sizing: border-box; /* padding을 포함하여 너비를 계산 */
+    }
+
+    .events-day::before {
+      content: "";
+      display: block;
+      width: 100%;
+      height: 1px;
+      background-color: black;
+      position: absolute;
+      top: 0;
+      left: 0;
+    }
+    
+    .events-day > div {
+      position: relative;
+    }
+    
+    /* 각 그리드 행 위에 수평선을 추가 */
+    .events-day > div::before {
+      content: "";
+      display: block;
+      width: 100%;
+      height: 1px; /* 선의 두께 */
+      background-color: black; /* 선의 색상 */
+      position: absolute;
+      top: -7px; /* 수평선이 그려질 위치 (조정 가능) */
+      left: 0;
     }
 
 
@@ -295,8 +331,6 @@
     margin: 0 auto; /* 수평 중앙 정렬 */
   }
   
-  
-
   .header {
     text-align: center;
     padding: 20px 0;
@@ -367,6 +401,32 @@
     box-sizing: border-box; /* padding을 포함하여 너비를 계산 */
     }
 
+    .events-day::before {
+      content: "";
+      display: block;
+      width: 100%;
+      height: 1px;
+      background-color: black;
+      position: absolute;
+      top: 0;
+      left: 0;
+    }
+    
+    .events-day > div {
+      position: relative;
+    }
+    
+    /* 각 그리드 행 위에 수평선을 추가 */
+    .events-day > div::before {
+      content: "";
+      display: block;
+      width: 100%;
+      height: 3px; /* 선의 두께 */
+      background-color: #e0e0e0; /* 선의 색상 */
+      position: absolute;
+      top: 0px; /* 수평선이 그려질 위치 (조정 가능) */
+      left: 0;
+    }
 
   .event {
     position: relative;
