--- a/static/css/faq/faq.css
+++ b/static/css/faq/faq.css
@@ -46,7 +46,6 @@ font-face {
         font-family: "Felixti";
         font-size: 7vw;
         font-weight: 500;
-        text-align: center;
         color: white;
         letter-spacing: 0.5vw;
         padding-bottom: 50px;
@@ -56,7 +55,6 @@ font-face {
         width: 380px;
         border-radius: 20px;
         padding: 20px;
-        text-align: center;
         position: relative;
         margin-top: 20%;
     }
@@ -66,13 +64,13 @@ font-face {
     }
 
     .faq-item {
-        margin-bottom: 20px;
+        margin-bottom: 40px;
         background-color: white;
         border-radius: 10px;
         overflow: hidden;
         transition: max-height 0.4s ease-out;
         max-height: 60px;
-        padding: 15px;
+        padding: 20px;
     }
 
     .faq-question {
@@ -84,6 +82,7 @@ font-face {
         padding-top: 7px;
         cursor: pointer;
         font-size: 15px;
+        text-align: left;
     }
 
     .faq-answer {
@@ -147,7 +146,6 @@ font-face {
         width: 380px;
         border-radius: 20px;
         padding: 20px;
-        text-align: center;
         position: relative;
         margin-top: 20%;
     }
@@ -157,14 +155,15 @@ font-face {
     }
 
     .faq-item {
-        width: 150%;
-        margin-bottom: 20px;
+        width: 190%; /* 부모 너비 100%로 설정 */
+        margin-bottom: 40px;
         background-color: white;
         border-radius: 10px;
         overflow: hidden;
         transition: max-height 0.4s ease-out;
         max-height: 60px;
-        padding: 15px;
+        padding: 20px;
+        margin-left: -180px;
     }
 
     .faq-question {
@@ -176,6 +175,7 @@ font-face {
         padding-top: 7px;
         cursor: pointer;
         font-size: 30px;
+        text-align: left;
     }
 
     .faq-answer {
