로고야 정신차려~

--- a/templates/comment/comment.html
+++ b/templates/comment/comment.html
@@ -8,11 +8,23 @@
       rel="stylesheet"
       href="{{ url_for('static', path='css/comment/comment.css') }}"
     />
-    <link rel="stylesheet" href="{{ url_for('static', path='css/main/logo.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', path='css/main/hamberger.css') }}">
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static', path='css/main/logo.css') }}"
+    />
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static', path='css/main/hamberger.css') }}"
+    />
     <script src="static/js/comment/comment.js" defer></script>
-    <script src="{{ url_for('static', path='js/main/logo.js') }}" defer></script>  
-    <script src="{{ url_for('static', path='js/main/hamberger.js') }}" defer></script>  
+    <script
+      src="{{ url_for('static', path='js/main/logo.js') }}"
+      defer
+    ></script>
+    <script
+      src="{{ url_for('static', path='js/main/hamberger.js') }}"
+      defer
+    ></script>
   </head>
   <body>
     <div class="content">
