--- a/static/css/comment/comment.css
+++ b/static/css/comment/comment.css
@@ -72,7 +72,7 @@ button:hover {
   background-color: #6b6592;
 }
 
-@media (max-width: 767px) {
+@media (max-width: 768px) {
   #comment-form {
     width: 100%;
     height: 8vh;
@@ -147,11 +147,11 @@ button:hover {
   }
 }
 
-.empty {
+/* .empty {
   height: 20vh;
   width: 100vw;
   background-color: #a0c800;
-}
+} */
 /* ------------------------------------------------------------------------------------------------- */
 
 @media (min-width: 768px) {
@@ -235,27 +235,3 @@ button:hover {
   }
 }
 
-/* Logo.css------------------------------------------------------------------------------------------------------------ */
-
-/* PIESTA LOGO */
-#logoImg {
-  position: fixed;
-  width: 60vw;
-  top: 10%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  text-align: center;
-}
-.logoDate {
-  text-align: center;
-  font-family: "Pretendard-Regular";
-  color: #afafaf;
-  font-size: 2.5vw;
-  letter-spacing: 0.5vw;
-}
-
-#logolmg img {
-  width: 100%;
-  height: auto;
-  margin-top: 15px;
-}
