--- a/static/css/booth/booth_list.css
+++ b/static/css/booth/booth_list.css
@@ -132,6 +132,11 @@ body {
     top: 6%; /* 상단에서 10px 떨어짐 */
     left: 85%; /* 좌측에서 10px 떨어짐 */
   }
+  .filter-buttons {
+    height: 5vw;
+    width: 90vw;
+    margin-left: 7.5vw;
+  }
 }
 
 /* PC에서 적용되는 css -> 가로 해상도가 1025px 보다 작은 화면에 적용  */
