--- a/templates/timetable/timetable.html
+++ b/templates/timetable/timetable.html
@@ -99,6 +99,11 @@
                 <img src="{{ url_for('static', path='images/타임테이블 아이콘/DJ.png')}}" alt="icon">
                 DJ 페스티벌 <!-- 이벤트 이름 -->
               </div>
+            <div style="grid-row: 1;" ></div>
+            <div style="grid-row: 3;" ></div>
+            <div style="grid-row: 5;" ></div>
+            <div style="grid-row: 7;" ></div>
+            <div style="grid-row: 17;" ></div>
           </div>
       </div>
 
@@ -121,6 +126,11 @@
               <img src="{{ url_for('static', path='images/타임테이블 아이콘/DJ.png')}}" alt="icon">
               DJ 페스티벌 <!-- 이벤트 이름 -->
             </div>
+            
+            <div style="grid-row: 1;" ></div>
+            <div style="grid-row: 3;" ></div>
+            <div style="grid-row: 5;" ></div>
+            <div style="grid-row: 17;" ></div>
           </div>
       </div>
 
@@ -148,11 +158,13 @@
               <img src="{{ url_for('static', path='images/타임테이블 아이콘/노래.png')}}" alt="icon">
               연예인 축하 공연 <!-- 이벤트 이름 -->
             </div>
-            <div class="event" id="day3" style="grid-row: 15 / 18;" onclick="showPopup('DJ 페스티벌', '22:00 ~', '10/18(금),,DJ 아나콘다,DJ 세포', '{{ url_for('static', path='images/타임테이블 아이콘/DJ.png')}}')">
+            <div class="event" id="day3" style="grid-row: 15 / 17;" onclick="showPopup('DJ 페스티벌', '22:00 ~', '10/18(금),,DJ 아나콘다,DJ 세포', '{{ url_for('static', path='images/타임테이블 아이콘/DJ.png')}}')">
               <span class="event-time">22:00 ~ </span> <!-- 시간 표시 -->
               <img src="{{ url_for('static', path='images/타임테이블 아이콘/DJ.png')}}" alt="icon">
               DJ 페스티벌 <!-- 이벤트 이름 -->
             </div>
+            <div style="grid-row: 1;" ></div>
+            <div style="grid-row: 17;" ></div>
           </div>
       </div>
   </div>
