--- a/static/css/main/home_page1.css
+++ b/static/css/main/home_page1.css
@@ -9,9 +9,9 @@ font-face {
 }
 
 .posterContainer {
-  /* display: flex;*/
+  /* display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: center; */
   position: relative;
   transform: translate(-50%, -50%);
   top: 50%;
@@ -25,7 +25,7 @@ font-face {
   transform: translate(-50%, -50%);
   top: 50%;
   left: 50%;
-  width: 38vh;
+  width: 35vh;
   border-radius: 10%;
 }
 
