--- a/static/css/faq/faq.css
+++ b/static/css/faq/faq.css
@@ -37,10 +37,6 @@ font-face {
 }
 
 @media (max-width: 768px) {
-    #logoImg {
-        width: 60vw;
-    }
-
     .FAQ {
         text-align: center;
         font-family: "Felixti";
@@ -48,7 +44,8 @@ font-face {
         font-weight: 500;
         color: white;
         letter-spacing: 0.5vw;
-        padding-bottom: 50px;
+        padding-bottom: 20px;
+        padding-top: 20px;
     }
 
     .container {
@@ -70,7 +67,7 @@ font-face {
         overflow: hidden;
         transition: max-height 0.4s ease-out;
         max-height: 60px;
-        padding: 20px;
+        padding: 15px;
     }
 
     .faq-question {
@@ -139,7 +136,7 @@ font-face {
         text-align: center;
         color: white;
         letter-spacing: 0.5vw;
-        padding-bottom: 50px;
+        padding-bottom: 30px;
     }
 
     .container {
