--- a/templates/booth/booth_list.html
+++ b/templates/booth/booth_list.html
@@ -35,11 +35,6 @@
       src="https://kit.fontawesome.com/2b7b5f2141.js"
       crossorigin="anonymous"
     ></script>
-    ></script>
-    <script
-      src="https://kit.fontawesome.com/2b7b5f2141.js"
-      crossorigin="anonymous"
-    ></script>
 
     <title>2024 GNU FIESTA</title>
   </head>
@@ -52,27 +47,10 @@
             src="{{ url_for('static', path='images/GNU_PIESTA_logo.svg')}}"
             alt="logo"
           />
-      <!-- 로고 -->
-      <div>
-        <div id="logoImg">
-          <img
-            src="{{ url_for('static', path='images/GNU_PIESTA_logo.svg')}}"
-            alt="logo"
-          />
           <p class="logoDate">2024.10.16.WED ~ 10.18.FRI</p>
         </div>
       </div>
-        </div>
-      </div>
 
-      <!-- 햄버거 버튼 -->
-      <a class="menu-trigger" href="#">
-        <span class="hambergerBread"></span>
-        <span class="hambergerCenter"></span>
-        <span class="hambergerBread"></span>
-      </a>
-      <div id="hambergerContents" class="hambergerContents">
-        <div id="navContainer">
       <!-- 햄버거 버튼 -->
       <a class="menu-trigger" href="#">
         <span class="hambergerBread"></span>
@@ -91,17 +69,7 @@
           <a id="ohgam" href="https://www.instagram.com/gnu_5gam/"
             >오감 총학생회</a
           >
-        </div>
-        <div id="piestaWebHost">
-          <a id="ohgam" href="https://www.instagram.com/gnu_5gam/"
-            >오감 총학생회</a
-          >
           &nbsp;X&nbsp;
-          <a id="mutsa" href="https://www.instagram.com/likelion_gnu/"
-            >멋쟁이사자처럼</a
-          >
-        </div>
-      </div>
           <a id="mutsa" href="https://www.instagram.com/likelion_gnu/"
             >멋쟁이사자처럼</a
           >
@@ -124,40 +92,7 @@
       };
 
       var map = new kakao.maps.Map(container, options);
-    <div class="title">BOOTH</div>
-    <!-- 지도 영역 -->
-    <div id="map"></div>
-    <script
-      type="text/javascript"
-      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=c7453c7dcb82e068c822a2ebc0c84cc4"
-    ></script>
-    <script>
-      var container = document.getElementById("map");
-      var options = {
-        center: new kakao.maps.LatLng(35.152961, 128.101117),
-        level: 4,
-      };
 
-      var map = new kakao.maps.Map(container, options);
-
-      var positions = [
-        {
-          title: "부스1",
-          latlng: new kakao.maps.LatLng(35.153016, 128.098656),
-        },
-        {
-          title: "부스2",
-          latlng: new kakao.maps.LatLng(35.15364, 128.099),
-        },
-        {
-          title: "부스3",
-          latlng: new kakao.maps.LatLng(35.152419, 128.102088),
-        },
-        {
-          title: "부스4",
-          latlng: new kakao.maps.LatLng(35.151877, 128.102978),
-        },
-      ];
       var positions = [
         {
           title: "부스1",
@@ -198,26 +133,6 @@
       }
     </script>
 
-      // 마커 이미지의 이미지 주소입니다
-      var imageSrc =
-        "https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/markerStar.png";
-
-      for (var i = 0; i < positions.length; i++) {
-        // 마커 이미지의 이미지 크기 입니다
-        var imageSize = new kakao.maps.Size(16, 23);
-
-        // 마커 이미지를 생성합니다
-        var markerImage = new kakao.maps.MarkerImage(imageSrc, imageSize);
-
-        // 마커를 생성합니다
-        var marker = new kakao.maps.Marker({
-          map: map, // 마커를 표시할 지도
-          position: positions[i].latlng, // 마커를 표시할 위치
-          title: positions[i].title, // 마커의 타이틀, 마커에 마우스를 올리면 타이틀이 표시됩니다
-          image: markerImage, // 마커 이미지
-        });
-      }
-    </script>
 
     <div class="filter-buttons">
       <input type="radio" id="date-16" name="date" value="10.16" checked>
@@ -265,5 +180,8 @@
       </div>
       {% endfor %}
     </div>
+    </div>
+    </body>
+    </html>
     
   
