--- a/templates/booth/booth_detail.html
+++ b/templates/booth/booth_detail.html
@@ -77,8 +77,8 @@
                     </a></p>
                 </div> -->
             </div>
-            <div class="heart">
-                <img src="/static/images/heart_default.png" alt="">
+            <div class="heart" onclick="toggleHeart()">
+                <img id="heartImage" src="/static/images/heart_default.png" alt="">
             </div>
         </div>
         
