스크롤 이벤트 적용

--- a/templates/booth/booth_list.html
+++ b/templates/booth/booth_list.html
@@ -61,9 +61,9 @@
         <div id="navContainer">
           <div id="hrefHOME" data-url="/home">HOME</div>
           <div id="hrefTIMETABLE" data-url="/timetable">TIMETABLE</div>
-          <div id="hrefBOOTH" data-url="/">BOOTH</div>
+          <div id="hrefBOOTH" data-url="/booth/list">BOOTH</div>
           <div id="hrefCOMMENT" data-url="/comment">COMMENT</div>
-          <div id="hrefFAQ" data-url="faq">FAQ</div>
+          <div id="hrefFAQ" data-url="/faq">FAQ</div>
         </div>
         <div id="piestaWebHost">
           <a id="ohgam" href="https://www.instagram.com/gnu_5gam/"
