--- a/templates/comment/comment.html
+++ b/templates/comment/comment.html
@@ -49,9 +49,9 @@
         <div id="navContainer">
           <div id="hrefHOME" data-url="/home">HOME</div>
           <div id="hrefTIMETABLE" data-url="/timetable">TIMETABLE</div>
-          <div id="hrefBOOTH" data-url="/">BOOTH</div>
+          <div id="hrefBOOTH" data-url="/booth/list">BOOTH</div>
           <div id="hrefCOMMENT" data-url="/comment">COMMENT</div>
-          <div id="hrefFAQ" data-url="faq">FAQ</div>
+          <div id="hrefFAQ" data-url="/faq">FAQ</div>
         </div>
         <div id="piestaWebHost">
           <a id="ohgam" href="https://www.instagram.com/gnu_5gam/"
@@ -67,7 +67,7 @@
         <div class="noticetitle">💬 &nbsp;방명록</div>
         <div class="noticec">
           오늘 축제에서 무엇을 기대하고 있나요?
-          <br />
+          <br/>
           방명록을 작성하고 기대감을 마음껏 표현하세요!
         </div>
       </div>
