--- a/templates/main/home.html
+++ b/templates/main/home.html
@@ -44,7 +44,7 @@
             <div id="hrefTIMETABLE" data-url="/timetable">TIMETABLE</div>
             <div id="hrefBOOTH" data-url="/booth/list">BOOTH</div>
             <div id="hrefCOMMENT" data-url="/comment">COMMENT</div>
-            <div id="hrefFAQ" data-url="faq">FAQ</div>
+            <div id="hrefFAQ" data-url="/faq">FAQ</div>
         </div>
         <div id="piestaWebHost">
             <a id="ohgam" href="https://www.instagram.com/gnu_5gam/">오감 총학생회</a>
