--- a/static/css/timetable/timetable.css
+++ b/static/css/timetable/timetable.css
@@ -38,6 +38,7 @@
     /* gap: 7px; */
     padding: 15px;
     padding-top: 0;
+    padding-left: 0;
     margin: 0 auto; /* 수평 중앙 정렬 */
     width: 100%;
   }
@@ -60,7 +61,7 @@
     grid-template-rows: repeat(20, 40px); /* 시간도 동일한 행 크기를 공유 */
     align-items: center;
     justify-content: flex-end;
-    gap: 7px;
+    gap: 0px;
   }
   
   .time-slot, .half-hour {
@@ -104,6 +105,7 @@
     padding-bottom: 20px;
     font-size: 10px; /* 요일 및 날짜 글자 크기 */
     height: 40px;
+
     }
   
   .events-day {
@@ -138,7 +140,7 @@
       height: 3px; /* 선의 두께 */
       background-color: #BCBCBC; /* 선의 색상 */
       position: absolute;
-      top: -7px; /* 수평선이 그려질 위치 (조정 가능) */
+      top: -0px; /* 수평선이 그려질 위치 (조정 가능) */
       left: 0;
     }
 
@@ -299,7 +301,16 @@
 
 
  /* ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ여기서부턴 큰화면  */
- @media (min-width: 768px) and (max-width: 1024px) {
+ @media (min-width: 768px) {
+  #logoImg {
+    width: 50%; /* 로고의 부모 요소에 대한 너비 설정 */
+}
+
+  #logoImg img {
+    width: 100%; /* 내부의 img 태그에 너비 100% 설정 */
+    height: auto; /* 비율 유지하면서 크기 조정 */
+    margin-top: 15px;
+}
   body {
     display: flex;
     flex-direction: column;
