--- a/static/css/timetable/timetable.css
+++ b/static/css/timetable/timetable.css
@@ -20,6 +20,8 @@
     font-family: 'pretendard', sans-serif;
     background: linear-gradient(to bottom, #2b2355, #4f4677);
     color: white;
+    height: 100%;
+    overflow: hidden;
   }
   
   .mainpage {
@@ -28,26 +30,30 @@
     justify-content: center;
     align-items: center;
     width: 70%;
-    margin-top: 120px;
+    margin-top: 5vh;
   }
   
   .timetable {
     display: grid;
     grid-template-columns: 0.3fr 1fr 1fr 1fr;
-    grid-template-rows: repeat(20, 40px);
+    grid-template-rows: repeat(16, 40px);
     /* gap: 7px; */
     padding: 15px;
     padding-top: 0;
     padding-left: 0;
     margin: 0 auto; /* 수평 중앙 정렬 */
     width: 100%;
+    overflow: scroll;
+    height: 60vh;
   }
   
   
 
   .header {
+    
     text-align: center;
     padding: 20px 0;
+
     font-size: 1rem;
     font-family: 'Felix Titling', sans-serif; /* Added font-family property */
     font-weight: 400; /* Regular font weight */
@@ -299,6 +305,7 @@
     font-family: 'pretendard', sans-serif;
     background: linear-gradient(to bottom, #2b2355, #4f4677);
     color: white;
+    overflow: hidden;
   }
   
   .mainpage {
@@ -307,7 +314,7 @@
     justify-content: center;
     align-items: center;
     width: 70%;
-    margin-top: 180px;
+    margin-top: 10vh;
   }
   
   .timetable {
@@ -320,6 +327,7 @@
     padding-left: 0;
     margin: 0 auto; /* 수평 중앙 정렬 */
     width: 70%;
+    height: 60vh;
   }
   
   .header {
