--- a/templates/comment/comment.html
+++ b/templates/comment/comment.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="{{ url_for('static', path='css/init.css') }}">
     <link
       rel="stylesheet"
       href="{{ url_for('static', path='css/comment/comment.css') }}"
