--- a/templates/booth/booth_detail.html
+++ b/templates/booth/booth_detail.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://fonts.googleapis.com/css?family=Prata' rel='stylesheet'><!-- BOOTH - Prata font 적용위해 -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="{{ url_for('static', path='css/init.css') }}">
     <link
       rel="stylesheet"
       href="{{ url_for('static', path='css/booth/booth_detail.css') }}"
