--- a/templates/faq/faq.html
+++ b/templates/faq/faq.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="{{ url_for('static', path='css/init.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', path='css/faq/faq.css') }}">
     <script src="{{ url_for('static', path='js/faq/faq.js') }}" defer></script>
     <script src="{{ url_for('static', path='js/main/hamberger.js') }}" defer></script>
