--- a/static/css/comment/comment.css
+++ b/static/css/comment/comment.css
@@ -230,7 +230,7 @@ button:hover {
   .noticetitle {
     color: white;
     font-weight: 200;
-    font-size: 2.5em;
+    font-size: 30px;
     margin-bottom: 1%;
   }
   .comment {
