--- a/static/css/timetable/timetable.css
+++ b/static/css/timetable/timetable.css
@@ -24,6 +24,7 @@
     overflow: hidden;
   }
   
+  
   .mainpage {
     display: flex;
     flex-direction: column;
@@ -326,7 +327,7 @@
     padding-top: 0;
     padding-left: 0;
     margin: 0 auto; /* 수평 중앙 정렬 */
-    width: 70%;
+    width: 30vw;
     height: 60vh;
   }
   
@@ -378,7 +379,7 @@
     /* border-left: 3px solid #f39ac8; 세로선 제거 */
   }
   
-
+  
   
   
   .day {
@@ -420,6 +421,7 @@
       /* border-radius: 10px; */
       color: #000000;
   }
+  
 
   .event-time {
     position: relative;
