--- a/static/css/main/logo.css
+++ b/static/css/main/logo.css
@@ -1,39 +1,67 @@
-font-face {
-    font-weight: 400;
-    font-family: "Pretendard-Regular";
-    src: url("https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff")
-      format("woff");
-}
-
-#logoImg {
-    position: fixed;
-    top: 10%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    z-index: 100;
-    /* opacity: 0; */
-    /* visibility: hidden; */
-    /* transition: opacity 0.3s ease-in-out, visibility 0s 0.3s; */
-}
-
-.logoDate {
-    text-align: center;
-    font-family: "Pretendard-Regular";
-    color: #afafaf;
-    font-size: 2.5vw;
-    letter-spacing: 0.5vw;
-}
-
-
-@media(max-width: 768px) {
+@media(max-width: 767px) {
+    font-face {
+        font-weight: 400;
+        font-family: "Pretendard-Regular";
+        src: url("https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff")
+          format("woff");
+    }
+    
+    #logoImg {
+        position: fixed;
+        top: 10%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        z-index: 100;
+        /* opacity: 0; */
+        /* visibility: hidden; */
+        /* transition: opacity 0.3s ease-in-out, visibility 0s 0.3s; */
+    }
+    
+    .logoDate {
+        text-align: center;
+        font-family: "Pretendard-Regular";
+        color: #afafaf;
+        font-size: 2.5vw;
+        letter-spacing: 0.5vw;
+    }
     #logoImg {
         width: 60vw;
     }
 }
 
 @media (min-width: 768px) and (max-width: 1024px) {
+    font-face {
+        font-weight: 400;
+        font-family: "Pretendard-Regular";
+        src: url("https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff")
+          format("woff");
+    }
+    
+    #logoImg {
+        position: fixed;
+        top: 10%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        z-index: 100;
+        /* opacity: 0; */
+        /* visibility: hidden; */
+        /* transition: opacity 0.3s ease-in-out, visibility 0s 0.3s; */
+    }
+    
+    .logoDate {
+        text-align: center;
+        font-family: "Pretendard-Regular";
+        color: #afafaf;
+        font-size: 2.5vw;
+        letter-spacing: 0.5vw;
+    }
     #logoImg {
         width: 50%;
     }
+}
 
+@media (min-width: 1025px) {
+    .logoContainer {
+      display: none;
+    }
 }
