글자 중앙정렬
ㅇ

--- a/templates/timetable/timetable.html
+++ b/templates/timetable/timetable.html
@@ -101,7 +101,7 @@
           <div class="event" id="day1" style="grid-row: 8 / 11;"
             onclick="showPopup(1, '피지컬X &, 비주얼 쇼', '18:30 ~ 20:00', '오프닝,참가자 입장 및 소개,규정포즈 심사,중간 심사 및 이벤트,2차 비교심사,최종심사(3명),심사 결과 집계 및 이벤트, 심사발표 및 단체촬영')">
             <!-- <img src="{{ url_for('static', path='images/타임테이블 아이콘/쇼2.png')}}" alt="icon"> -->
-            피지컬X & <br> 비주얼 쇼 <!-- 이벤트 이름 -->
+            피지컬X & 비주얼 쇼 <!-- 이벤트 이름 -->
             <span class="event-time">18:30 ~ 20:00</span> <!-- 시간 표시 -->
 
           </div>
@@ -146,7 +146,7 @@
           <div class="event" id="day2" style="grid-row: 5 / 11;"
             onclick="showPopup(2, 'B.P.M &, 민속무용학과 공연', '17:00 ~ 20:00', '오프닝,,아가미,배재영,마지막,WITH너무 떨리조,소울 장채연,준수한 준수,이우리,Llee 이현정,경상대 다비치,킨더조이,정원정,BHC,505,강현점,민속무용학과,,B.P.M 시상식')">
             <!-- <img src="{{ url_for('static', path='images/타임테이블 아이콘/쇼2.png')}}" alt="icon"> -->
-            B.P.M & <br> 민속무용학과 공연 <!-- 이벤트 이름 -->
+            B.P.M & 민속무용학과 공연 <!-- 이벤트 이름 -->
             <span class="event-time">17:00 ~ 20:00</span> <!-- 시간 표시 -->
 
           </div>
