--- a/static/css/timetable/timetable.css
+++ b/static/css/timetable/timetable.css
@@ -1,21 +1,24 @@
-@font-face {
-  font-weight: 400; /* 폰트의 두께 */
-  font-family: 'Felixti'; /* 폰트 이름 */
-  src: url('/static/font/Felixti.TTF') format('truetype');
-}
-@font-face {
-  font-weight: 400;
-  font-family: 'Pretendard-Regular';
-  src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
-}
-@font-face {
-  font-weight: 700;
-  font-family: "Pretendard-Bold";
-  src: url("https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-SemiBold.woff")
-      format("woff");
-}
+
 /* ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ휴대폰 */
 @media (max-width: 768px) {
+  @font-face {
+    font-weight: 400; /* 폰트의 두께 */
+    font-family: 'Felixti'; /* 폰트 이름 */
+    src: url('/static/font/Felixti.TTF') format('truetype');
+  }
+  
+  @font-face {
+    font-weight: 400;
+    font-family: 'Pretendard-Regular';
+    src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
+  }
+  @font-face {
+    font-weight: 700;
+    font-family: "Pretendard-Bold";
+    src: url("https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-SemiBold.woff")
+        format("woff");
+  }
+
   body {
     display: flex;
     flex-direction: column;
@@ -106,6 +109,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 100%;
     /* width: auto; */
     /* width: 1fr; */
     
@@ -294,6 +298,25 @@
 
  /* ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ여기서부턴 큰화면  */
  @media (min-width: 768px) {
+
+  @font-face {
+    font-weight: 400; /* 폰트의 두께 */
+    font-family: 'Felixti'; /* 폰트 이름 */
+    src: url('/static/font/Felixti.TTF') format('truetype');
+  }
+  
+  @font-face {
+    font-weight: 400;
+    font-family: 'Pretendard-Regular';
+    src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
+  }
+  @font-face {
+    font-weight: 700;
+    font-family: "Pretendard-Bold";
+    src: url("https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-SemiBold.woff")
+        format("woff");
+  }
+
   #logoImg {
     width: 50%; /* 로고의 부모 요소에 대한 너비 설정 */
 }
@@ -381,6 +404,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 100%;
     /* width: 1fr; */
     
     /* border-left: 3px solid #f39ac8; 세로선 제거 */
@@ -424,9 +448,15 @@
       cursor: pointer; /* 커서 스타일 */
       gap: 7px; /* 요소들 사이의 간격 */
       width: 100%; /* 전체 너비 */
-      box-sizing: border-box; /* 패딩 포함 너비 계산 */
+      box-sizing:border-box ; /* 패딩 포함 너비 계산 */
       /* border-radius: 10px; */
       color: #000000;
+      text-align: center;
+      word-break: keep-all;  /* 어절 단위로 줄바꿈 */
+  }
+
+  .space {
+    gap: 0;
   }
   
 
